[package]
name = "mitey"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "1.1.0"
async-h1 = { git = "https://github.com/hwchen/async-h1", branch = "minimize-deps" }
futures-io = "0.3.4"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
